@@ -39,6 +39,7 @@ AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_FILES([
 	Makefile
 	data/Makefile
+	data/exports/Makefile
 	doc/Makefile
 	doc/api/Makefile
 	doc/api/version.xml
