@@ -25,55 +25,3 @@
 #   Rodrigo Moya <rodrigo@gnome-db.org>
 #   Pierre Wieser <pwieser@trychlos.org>
 #   ... and many others (see AUTHORS)
-
-SUBDIRS = \
-	exports												\
-	$(NULL)
-
-schemas_in_files = \
-	nautilus-actions-prefs.schemas.in					\
-	nautilus-actions-confs.schemas.in					\
-	$(NULL)
-
-schemas_files = $(schemas_in_files:.schemas.in=.schemas)
-
-nautilus-actions-confs.schemas.in:
-	$(top_srcdir)/src/utils/nautilus-actions-schemas -s > $@
-
-schemasdir = $(pkgdatadir)
-
-schemas_DATA = $(schemas_files)
-
-@INTLTOOL_SCHEMAS_RULE@
-
-if GCONF_SCHEMAS_INSTALL
-NA_INSTALL_SCHEMAS  = yes
-else
-NA_INSTALL_SCHEMAS = no
-endif
-
-EXTRA_DIST = \
-	$(schemas_in_files)									\
-	$(NULL)
-
-install-data-hook:
-	@if test "$(NA_INSTALL_SCHEMAS)" = "yes"; then \
-		if test `id -u` != 0; then \
-			echo "***"; \
-			echo "*** You need to be root to install GConf schemas"; \
-			echo "***"; \
-			exit 1; \
-		fi; \
-		for p in $(schemas_DATA); do \
-			GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $$p; \
-		done \
-	fi
-
-CLEANFILES = $(schemas_files)
-
-uninstall-hook:
-	@if test "$(NA_INSTALL_SCHEMAS)" = "yes"; then \
-		for p in $(schemas_DATA); do \
-			GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-uninstall-rule $$p; \
-		done \
-	fi
