@@ -1,0 +1,6 @@
+data/exports
+------------
+This directory contains examples of files exported from NACT, the
+Nautilus-Actions Configuration Tool.
+
+P. Wieser, Aug. 2010
